kubernetes/apps/default/innogeoint/app/deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name innogeoint
  labels:
    app: *name
spec:
  selector:
    matchLabels:
      app: *name
  replicas: 1
  template:
    metadata:
      labels:
        app: *name
    spec:
      # imagePullSecrets:
      #   - name: ghcr-pull-secret
      containers:
        - name: *name
          image: ghcr.io/minhtt159/innogeoint:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 1000m
              memory: 2Gi
            limits:
              cpu: 2000m
              memory: 2Gi

          # livenessProbe:
          #   tcpSocket:
          #     port: 8080
          #   initialDelaySeconds: 5
          #   timeoutSeconds: 5
          #   successThreshold: 1
          #   failureThreshold: 3
          #   periodSeconds: 10
          # readinessProbe:
          #   httpGet:
          #     path: /health
          #     port: 8080
          #   initialDelaySeconds: 5
          #   timeoutSeconds: 2
          #   successThreshold: 1
          #   failureThreshold: 3
          #   periodSeconds: 10

          securityContext:
            capabilities:
              drop:
                - "ALL"
              add:
                - "NET_BIND_SERVICE"
            seccompProfile:
              type: "RuntimeDefault"
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false

          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - name: localtime
              mountPath: /etc/localtime
      volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/Europe/Amsterdam
      restartPolicy: Always
---
