kubernetes/apps/default/innogeoint/app/service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: &name innogeoint
spec:
  selector:
    app: *name
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
---
